@@ -10,7 +10,7 @@ blockquote[type="cite"] {
 </style>
 </head>
 <body>
-<div id="description">This tests to see that if the caret is in an empty quoted paragraph, that paragraph is in content that preserve newlines, and there's no quoted content before that paragraph, then pressing delete removes that paragraph's quoting.  Below you should see the attribution line, an empty paragraph, an unquoted paragraph, and then a quoted paragraph with "quoted" in it.</div>
+<div id="description">This tests to see that if the caret is in an empty quoted paragraph, that paragraph is in content that preserve newlines, and there's no quoted content before that paragraph, then pressing delete removes that paragraph's quoting and removes the empty line.  Below you should see the attribution line, an unquoted paragraph, and then a quoted paragraph with "quoted" in it.</div>
 <div id="edit" contentEditable="true">
 <div><br></div>
 <div>On Tuesday, Justin wrote:</div>
