@@ -1,3 +1,15 @@
+2009-03-24  Adele Peterson  <adele@apple.com>
+
+        Reviewed by Darin Adler.
+
+        Updated tests for https://bugs.webkit.org/show_bug.cgi?id=24707
+        <rdar://problem/6593021> Deleting with a caret in a blank, quoted line decreases the quoting, but does not delete the line
+
+        * editing/deleting/2610675-1-expected.txt:
+        * editing/deleting/2610675-1.html:
+        * editing/deleting/2610675-2-expected.txt:
+        * editing/deleting/2610675-2.html:
+
 2009-03-24  Mark Rowe  <mrowe@apple.com>
 
         Rubber-stamped by Sam Weinig.
